# intro_to_LMMs

./: .gitignore  02_open_ai.ipynb  404.html  Dockerfile  IIT_consciousness_LLMs.ipynb  Introduction to LLM workshop.docx  L2_NLP_transformers.ipynb  LLM_demo_tokenlevel_inspection.ipynb  LLaMA_lora_int8.ipynb  MicrosoftAgentFramework.py  PEFT.md  README.md  Situational_Awareness_LLMs.ipynb  Situational_Awareness_LLMs_LLaMA.ipynb  Situational_Awareness_LLMs_llama_cpp_quantizedlocal.ipynb  [1_1]_Transformer_from_Scratch_(exercises).ipynb  [1_1]_Transformer_from_Scratch_(solutions).ipynb  agentic_workflow_llm_opensource.ipynb  arc_solver.ipynb  chapter_1_introduction_to_language_models.ipynb  deep_research_agent_ag2.ipynb  deep_research_agent_ag2_lifeaswedonotknowit.ipynb  deep_research_agent_ag2_nationalAI_strategy.ipynb  explainability_using_LLM.ipynb  fine_tune_llm.ipynb  gpt-oss-120b.py  gpt_oss_120b.ipynb  guide.md  introduction_to_stablediffusion.ipynb  lessons.md  mkdocs.yml  pyproject.toml  requirements-handson.txt  simple_agent_ag2.ipynb  simple_llama_finetuner.ipynb  smolagents_websearch.ipynb  softmax_practical.ipynb  test_pythonpackage.py  text_classification_with_transformer.ipynb  text_translation_summarization.ipynb  (+1 more)
.github/workflows/: CI.yml  pre-commit.yml  summary.yml
agents/smolagents/L3/: Lesson3.ipynb  readme.md
docs/: contributing.md  index.md  installation.md
examples/nlp/ipynb/: text_classification_with_transformer.ipynb
installation/: index.html
site/: index.html
site/contributing/: index.html
src/intro_to_LMMs/: __init__.py
src/intro_to_LMMs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_intro_to_LMMs.py
