[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intro_to_LMMs"
version = "0.1.0"
description = "Introduction to large language models (LMMs)"
authors = [
    {name = "Soumya Banerjee", email = "sb2333@cam.ac.uk"}
]
license = {text = "MIT"}
keywords = ["LMMs", "large language models", "AI", "machine learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your project dependencies here, e.g.,
     "numpy",
     "pandas",
     "torch",
     "llama-index",
     "openai",
     "python-dotenv",
     "rich",
     "pydantic",
     "chromadb",
     "streamlit",
     "transformers",
     "matplotlib",
     "seaborn",
     "scikit-learn",
     "pysyllables",
     "jinja2",
     "tqdm",
     "numpy",
     "PyMuPDF"
]

[tool.setuptools.packages]
find = {"where" = ["src"]}

[tool.setuptools]
package-dir = {"" = "src"}  # Adjust the source directory if necessary


